--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
             Remove-Item "__pycache__" -Recurse -Force
           }
       - name: Run unit tests
-        run: python -m unittest discover
+        run:python -m unittest testing.py
 
 
 
